// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Map /> renders all items in a Facet of array 1`] = `
<div>
  <span>
    1
    <span>
      0
    </span>
  </span>
  <span>
    2
    <span>
      1
    </span>
  </span>
  <span>
    3
    <span>
      2
    </span>
  </span>
  <span>
    4
    <span>
      3
    </span>
  </span>
  <span>
    5
    <span>
      4
    </span>
  </span>
</div>
`;

exports[`<Map /> unmounts components when the array reduces in size 1`] = `
<div>
  <span>
    1
    <span>
      0
    </span>
  </span>
  <span>
    2
    <span>
      1
    </span>
  </span>
  <span>
    3
    <span>
      2
    </span>
  </span>
  <span>
    4
    <span>
      3
    </span>
  </span>
  <span>
    5
    <span>
      4
    </span>
  </span>
</div>
`;

exports[`<Map /> unmounts components when the array reduces in size 2`] = `
<div>
  <span>
    1
    <span>
      0
    </span>
  </span>
  <span>
    2
    <span>
      1
    </span>
  </span>
</div>
`;

exports[`<MapWithKey /> renders all items in a Facet of array 1`] = `
<div>
  <span>
    a
    <span>
      0
    </span>
  </span>
  <span>
    b
    <span>
      1
    </span>
  </span>
  <span>
    c
    <span>
      2
    </span>
  </span>
  <span>
    d
    <span>
      3
    </span>
  </span>
  <span>
    e
    <span>
      4
    </span>
  </span>
</div>
`;

exports[`<MapWithKey /> rerenders only when key is updated or added 1`] = `
<div>
  <div>
    <p>
      Key: 1
    </p>
    <p>
      Data: a
    </p>
  </div>
  <div>
    <p>
      Key: 2
    </p>
    <p>
      Data: b
    </p>
  </div>
  <div>
    <p>
      Key: 3
    </p>
    <p>
      Data: c
    </p>
  </div>
  <div>
    <p>
      Key: 4
    </p>
    <p>
      Data: d
    </p>
  </div>
  <div>
    <p>
      Key: 5
    </p>
    <p>
      Data: e
    </p>
  </div>
</div>
`;

exports[`<MapWithKey /> rerenders only when key is updated or added 2`] = `
<div>
  <div>
    <p>
      Key: 1
    </p>
    <p>
      Data: z
    </p>
  </div>
  <div>
    <p>
      Key: 2
    </p>
    <p>
      Data: b
    </p>
  </div>
  <div>
    <p>
      Key: 3
    </p>
    <p>
      Data: c
    </p>
  </div>
  <div>
    <p>
      Key: 4
    </p>
    <p>
      Data: d
    </p>
  </div>
  <div>
    <p>
      Key: 5
    </p>
    <p>
      Data: e
    </p>
  </div>
</div>
`;

exports[`<MapWithKey /> rerenders only when key is updated or added 3`] = `
<div>
  <div>
    <p>
      Key: 1
    </p>
    <p>
      Data: z
    </p>
  </div>
  <div>
    <p>
      Key: 2
    </p>
    <p>
      Data: b
    </p>
  </div>
  <div>
    <p>
      Key: 3
    </p>
    <p>
      Data: c
    </p>
  </div>
  <div>
    <p>
      Key: 4
    </p>
    <p>
      Data: d
    </p>
  </div>
  <div>
    <p>
      Key: 5
    </p>
    <p>
      Data: e
    </p>
  </div>
  <div>
    <p>
      Key: 6
    </p>
    <p>
      Data: f
    </p>
  </div>
</div>
`;

exports[`<MapWithKey /> unmounts components when the array reduces in size 1`] = `
<div>
  <span>
    a
    <span>
      0
    </span>
  </span>
  <span>
    b
    <span>
      1
    </span>
  </span>
  <span>
    c
    <span>
      2
    </span>
  </span>
  <span>
    d
    <span>
      3
    </span>
  </span>
  <span>
    e
    <span>
      4
    </span>
  </span>
</div>
`;

exports[`<MapWithKey /> unmounts components when the array reduces in size 2`] = `
<div>
  <span>
    a
    <span>
      0
    </span>
  </span>
  <span>
    b
    <span>
      1
    </span>
  </span>
</div>
`;
